[tool.poetry]
name = "pydomkeys"
version = "0.3.1"
description = "A python library for domain-entity key generation identifiers e.g., user, provider, inventory item, etc."
authors = ["darryl west <dpw@raincitysoftware.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "pydomkeys"}]
keywords = ["no-sql", "redis", "short-keys", "database", "key-value", "key-value-store"]
classifiers = [
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Development Status :: 3 - Alpha",
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
sphinx = "^7.2.5"
furo = "^2023.8.19"
sphinx-multiversion = "^0.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
faker = "^19.3.0"
pylint = "^2.17.5"
mypy = "^1.5.1"
perf8 = "^0.0.1"
refurb = "^1.20.0"
rich = "^13.5.2"
ruff = "^0.0.287"

[tool.poetry.group.doc.dependencies]
furo = "^2023.8.19"
pytest = "^7.4.0"
black = "^23.7.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
faker = "^19.3.0"
pylint = "^2.17.5"
mypy = "^1.5.1"
perf8 = "^0.0.1"
refurb = "^1.20.0"
rich = "^13.5.2"
sphinx = "^7"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "N", "D", "S", "B", "A", "COM", "C4", "ICN", "ARG", "PTH", "TD", "ERA", "PD", "PL", "NPY", "AIR", "PERF", "RUF"]
ignore = ['TD003', 'D203', 'D205', 'D213', 'D413', 'D406']

fix = false
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
target-version = "py311"
line-length = 120

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}


# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
